# fnvision

./: .gitignore  ACCEPTABLE_USE_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: python-publish.yml
default_calibration/: calibration.yaml
docs/: SPEC_fnvision_v1.md
fnvision/: __init__.py  config.py  encoder.py  gaze.py  weight_field.py
fnvision/tools/: __init__.py  calibration.py
tests/: test_calibration.py  test_encoder.py  test_gaze.py
