[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnvision"
version = "0.1.0"
description = "Fovea Native Vision – biologically-motivated dual-fovea encoder for autonomous agents and robotics"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = [
    "foveated vision",
    "computer vision",
    "autonomous agents",
    "robotics",
    "binocular",
    "attention",
    "perception",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
tools = [
    "Pillow>=10.0",
]
dev = [
    "pytest>=7.0",
    "Pillow>=10.0",
]

[project.scripts]
fnvision-calibrate = "fnvision.tools.calibration:main"

[project.urls]
Repository = "https://github.com/soenning-ai/fnvision"
Documentation = "https://github.com/soenning-ai/fnvision/blob/main/docs/SPEC_fnvision_v1.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["fnvision*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
